--- a/style.css
+++ b/style.css
@@ -23,3 +23,76 @@ input {
     width : 300px;
     border : solid blue;
 }
+
+
+/* Main Section Blog Section  */
+
+h3{
+    padding-top  :5vh;
+    padding-bottom : 5vh;
+    padding-left : 40vw;
+    background-color: black;
+    color : white;
+    font-size : 1.2em;
+
+}
+
+#container {
+    display : flex;
+    flex-wrap : wrap;
+    height: 100%;
+    width: 100%;
+}
+
+.flex-card {
+    height : 100vh;
+    width  :25%;
+    /* border : 5px solid blue; */
+    flex-direction: column;
+    margin: 10px;
+    /* justify-content: space-between;    */
+    justify-content:flex-end;
+    align-items: center;
+    position: relative;
+    margin : 20px 50px;
+}
+
+/* .container :hover{
+    border : solid blue;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+} */
+
+.flex-card :hover{
+    border : solid blue;
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
+.name{
+    font-size: 1.2em;
+    color : blue;
+}
+
+.logo1{
+    background-image: url(./assets/image2.jpg);
+    height : 100px;
+    width : 100px;
+    /* border-radius: 20%; */
+    background-position:inherit;
+    background-repeat: no-repeat;
+    background-size: 100px;
+    background-position: center;
+    margin-left : 30%;
+}
+
+.info{
+    padding-left : 20%;
+    /* margin-top : 10%; */
+}
+
+i{
+    /* height : 40px;
+    width : 40px; */
+    /* font-size: 12em; */
+    color : blue;
+}
+
